src/assets/css/buttons.css
@layer components {
	.button {
		@apply px-4 py-2 rounded-lg;
	}

	.button--primary {
		@apply button;
		@apply font-semibold bg-purple-800 text-white;
		@apply hocus:bg-purple-900;
		@apply active:bg-purple-950;
	}

	.button--muted {
		@apply button;
		@apply bg-white ring-1 ring-inset ring-grey-200;
		@apply hocus:bg-grey-50 hocus:ring-grey-300;
		@apply active:bg-grey-100 active:ring-grey-400;
	}
}

